<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hellosharedprefs.MainActivity">

    <TextView
        android:id="@+id/count_textview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60"
        android:background="@color/default_background"
        android:gravity="center"
        android:text="@string/default_count"
        android:textColor="@android:color/white"
        android:textSize="112sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_weight="10"
        android:orientation="horizontal">

        <Button
            android:id="@+id/black_background_button"
            style="@style/AppTheme.Button.Colored"
            android:background="@color/black"
            android:onClick="changeBackground"
            android:text="@string/black_button" />

        <Button
            android:id="@+id/red_background_button"
            style="@style/AppTheme.Button.Colored"
            android:background="@color/red_background"
            android:onClick="changeBackground"
            android:text="@string/red_button" />

        <Button
            android:id="@+id/blue_background_button"
            style="@style/AppTheme.Button.Colored"
            android:background="@color/blue_background"
            android:onClick="changeBackground"
            android:text="@string/blue_button" />

        <Button
            android:id="@+id/green_background_button"
            style="@style/AppTheme.Button.Colored"
            android:background="@color/green_background"
            android:onClick="changeBackground"
            android:text="@string/green_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/count_button"
            style="@style/AppTheme.Button"
            android:layout_marginHorizontal="8dp"
            android:onClick="countUp"
            android:text="@string/count_button" />

        <Button
            android:id="@+id/reset_button"
            style="@style/AppTheme.Button"
            android:layout_marginHorizontal="8dp"
            android:onClick="reset"
            android:text="@string/reset_button" />

        <Button
            android:id="@+id/setting_button"
            style="@style/AppTheme.Button"
            android:layout_marginHorizontal="8dp"
            android:onClick="setting"
            android:text="@string/setting_button" />

    </LinearLayout>
</LinearLayout>